app/javascript/style/components/_modal.scss
@use '../utils/color';
@use '../utils/keyframes';
@use '../utils/font';
@use '../utils/z_index';
@use '../utils/breakpoints' as *;

.modal {
  .modal-skirt {
    position: fixed;
    z-index: z_index.$modal-skirt;
    padding-top: 100px;
    right: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.4);
  }

  .modal-content {
    z-index: z_index.$modal;
    position: fixed;
    width: 320px;
    max-width: 90vw;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: color.$white;
    border: 1px solid #888;
    border-radius: 1rem;
    animation: fadeIn ease-in-out 300ms both;

    .error {
      font-family: font.$nunito;
      font-weight: font.$heavy-weight;
      font-size: 12px;
      line-height: 10px;
      text-align: center;
      color: color.$red-highlight;
      margin: 5px 20px;
      max-width: 280px;
      height: 19px;
    }
  }

  .modal-image {
    display: block;
    margin: 35px 150px 29px 130px;
    width: 42px;
  }

  .modal-label {
    color: color.$veue-corporate;
    font-size: 19px;
    text-align: center;
    font-family: font.$poppins;
    line-height: 28px;
    letter-spacing: -0.5px;
  }

  .form-area {
    display: flex;
    flex-direction: column;
    .form-row {
      flex: 1;
      padding-top: 0.1rem;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      text-align: center;
      flex-wrap: wrap;
      &__title {
        margin: 10px 40px 15px 40px;
        font-family: font.$nunito;
        font-size: 12px;
        text-align: center;
        line-height: 20px;
        height: 40px;
        color: color.$neutral-dark;

        @include large {
          font-size: 15px;
          max-width: 240px;
        }
      }
      .form-item {
        flex: 1;
        text-align: center;
        display: flex;

        #phone_number_input {
          outline: none;
          width: 235px;
          height: 34px;
          border-radius: 10px;
          border: 1px solid color.$neutral-soft;
          margin-left: 60px;
          font-family: font.$nunito;
          size: 15px;
          color: color.$neutral-dark;
          line-height: 20px;
          @include smallThin {
            min-width: 238px;
          }
        }

        .iti__selected-flag {
          border-radius: 10px;
          margin: 0 5px 0 20px;
          padding: 0px;
          border: 1px solid color.$neutral-soft;
          height: 34px;
        }

        .iti__flag {
          margin: 6px;
        }

        .iti__arrow {
          display: none;
        }

        .iti__country {
          display: flex;
          position: relative;
          flex-wrap: wrap;
          padding: 0;
        }

        .iti__country-name {
          display: block;
          padding-left: 10px;
          font-size: 10px;
          color: color.$neutral-dark;
          max-width: 220px;
          overflow: hidden;
          text-overflow: ellipsis;
        }

        .iti__divider {
          width: 240px;
          height: 1px;
          color: color.$neutral-soft;
          margin: 0 0 0 15px;
        }

        .iti__flag-box {
          margin-right: 0px;
        }

        .iti__country-list {
          width: 280px;
          height: 170px;
          background: color.$white;
          border: 1px solid color.$neutral-soft;
          border-radius: 10px;
          margin: 5px 20px 0 20px;
        }

        .iti__dial-code {
          font-size: 10px;
          color: color.$neutral-regular;
          min-width: 20px;
          position: absolute;
          right: 3px;
        }

        ::-webkit-scrollbar {
          width: 3px;
          height: 40px;
          border-radius: 10px;
        }

        ::-webkit-scrollbar-thumb {
          border-radius: 10px;
          width: 3px;
          height: 40px;
          border-radius: 10px;
          background: color.$neutral-soft;
        }

        .iti--allow-dropdown input,
        .iti--allow-dropdown input[type="tel"],
        .iti--allow-dropdown input[type="text"],
        .iti--separate-dial-code input,
        .iti--separate-dial-code input[type="tel"],
        .iti--separate-dial-code input[type="text"] {
          padding-left: 10px;
          font-family: font.$nunito;
          font-size: 15px;
          line-height: 20px;
          color: color.$neutral-middle;
        }

        .form-code-div {
          width: 190px;
          overflow: hidden;
          margin: 0 auto;
        }

        .auth-input {
          border: 2px solid color.$neutral-soft;
          border-radius: 10px;
          display: inline-block;
          height: 34px;
          width: 90%;
          background: color.$white;
          font-size: 15px;
          line-height: 20px;
          text-align: center;
          color: color.$neutral-dark;
          margin-bottom: 12px;

          &:focus,
          &:hover {
            border: 1px solid color.$veue-corporate;
          }
        }

        #display-name-input {
          color: color.$neutral-dark;
          font-size: 15px;
          line-height: 20px;
          padding: 7px 0 7px 10px;
          width: 280px;
          height: 34px;
          border: 1px solid color.$neutral-middle;
          box-sizing: border-box;
          border-radius: 10px;
          margin: 0 20px 0 20px;
        }
      }

      button {
        flex: 1;
        flex-grow: 1;
        background: color.$veue-corporate;
        border-radius: 10px;
        height: 34px;
        width: 280px;
        color: color.$white;
        font-family: font.$nunito;
        font-size: 15px;
        margin: 10px 20px 20px 20px;
        line-height: 20px;
        font-weight: font.$heavy-weight;
        &:disabled {
          background: color.$neutral-accents;
          color: color.$neutral-middle;
        }
      }

      .form-privacy {
        height: 28px;
        font-family: font.$nunito;
        color: color.$neutral-regular;
        font-size: 9px;
        line-height: 11.64px;
        text-align: center;
        margin: 0 40px 31px 40px;
        @include large {
          font-size: 10px;
          line-height: 13.64px;
        }
      }

      input,
      .iti {
        flex: 1;
        flex-grow: 1;
        outline: none;
        box-sizing: border-box;
        background: color.$white;
        border: none;
      }
    }
  }

  .form-cancel {
    font-size: 13px;
    color: color.$neutral-middle;
    line-height: 18px;
    margin-bottom: 20px;
  }

  .footer {
    background-color: color.$neutral-background;
    border-radius: 0px 0px 10px 10px;
    width: auto;
    height: 120px;
    display: flex;
    flex-direction: column;

    &__title {
      font-family: font.$poppins;
      color: color.$neutral-regular;
      height: 18px;
      font-weight: 500;
      font-size: 10px;
      text-align: center;
      margin: 29px 20px 8px 20px;
      @include large {
        font-size: 12px;
        line-height: 18px;
      }
    }

    &__body {
      font-family: font.$nunito;
      font-size: 9px;
      text-align: center;
      color: color.$neutral-regular;
      height: 28px;
      margin: 8px 60px 37px 60px;
      line-height: 14px;
      @include large {
        font-size: 10px;
        line-height: 14px;
      }
    }
  }
}

